--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
   <title>演習9</title>
 
 <body>
-  <header>
-
-  </header>
+  <header> </header>
+  <main>
+    <div class="step-box">
+      <div class="step-img1"></div>
+      <span class="step-num">step1</span>
+      <h3 class="title">タイトルが入ります</h3>
+      <p class="text">
+        　　 "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
+      </p>
+    </div>
+    <div class="step-box">
+      <div class="step-img2"></div>
+      <span class="step-num">step2</span>
+      <h3 class="title">タイトルがはいります</h3>
+      <p class="text">
+        "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
+      </p>
+    </div>
+    <div class="step-box">
+      <div class="step-img3"></div>
+      <span class="step-num">step3</span>
+      <h3 class="title">タイトルが入ります</h3>
+      <p class="text">
+        "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
+      </p>
+    </div>
+  </main>
 
 </body>
 </head>
