--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>演習9</title>
 
 <body>
-  <header> </header>
+  <header></header>
   <main>
     <div class="step-box">
       <div class="step-img1"></div>
@@ -17,6 +17,7 @@
         　　 "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
       </p>
     </div>
+
     <div class="step-box">
       <div class="step-img2"></div>
       <span class="step-num">step2</span>
@@ -25,6 +26,7 @@
         "文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。"
       </p>
     </div>
+    
     <div class="step-box">
       <div class="step-img3"></div>
       <span class="step-num">step3</span>
@@ -34,7 +36,7 @@
       </p>
     </div>
   </main>
-
+  <footer></footer>
 </body>
 </head>
 
